[metadata]
name = ghfailwx
description = Test project for GH issue with wxWidgets
author = Svein Seldal
author_email = sveinse@seldal.com

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.10, <4
install_requires =
    wxPython
    types-wxpython
    pytest
    coverage
    pytest-cov

[options.packages.find]
where = src
